--- a/SampleWeb/src/main/resources/templates/menu.html
+++ b/SampleWeb/src/main/resources/templates/menu.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>トップメニュー</title>
-</head>
-<body>
 
+<head>
+	<meta charset="UTF-8">
+	<title>トップメニュー</title>
+</head>
+
+<body>
+	<div>メニュー画面</div>
 </body>
+
 </html>
